added contact page animation

--- a/contactus.html
+++ b/contactus.html
@@ -66,65 +66,65 @@
           class="col-lg-6 herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0 pb-4"
           style="z-index: 2"
         >
-          <div class="werow-csoz d-flex my-5">
+          <div class="werow-csoz d-flex my-5 banner-gsp">
             <h5 class="fw-bold fs-6 text-uppercase">Contact &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
               Us
             </h5>
           </div>
 
-            <h2 class="text-altlight fw-bold mb-4">
+            <h2 class="text-altlight fw-bold mb-4 mainText-gsp">
               Find the Perfect Solution for Your Business
             </h2>
-            <p class="w-75">
+            <p class="w-75 mainText-gsp">
               Give us a shout using the form below or any other contact methods to get your IT needs sorted!
             </p>
             <div class="row contactwidth-csoz mb-4">
               <div class="d-flex mb-3">
-                  <i class="bi bi-telephone-fill fs-5"></i>
+                  <i class="bi bi-telephone-fill fs-5 icsca-gsp"></i>
                   <div class="border-bottom ms-3 py-1 flex-fill">
-                      <h6 class="fw-bold text-start">(+61) 3 9119 3003 / <span class="d-inline-block">(+94)76 836 8277</span> </h6>
+                      <h6 class="fw-bold text-start context-gsp">(+61) 3 9119 3003 / <span class="d-inline-block">(+94)76 836 8277</span> </h6>
                   </div>
               </div>
               <div class="d-flex mb-3">
-                  <i class="bi bi-envelope-fill fs-5"></i>
+                  <i class="bi bi-envelope-fill fs-5 icsca-gsp"></i>
                   <div class="border-bottom ms-3 flex-fill">
-                      <h6 class="fw-bold py-1 text-start">hello@flexiata.com.au</h6>
+                      <h6 class="fw-bold py-1 text-start context-gsp">hello@flexiata.com.au</h6>
                   </div>
               </div>
               <div class="d-flex mb-3">
-                  <i class="bi bi-geo-alt-fill fs-5"></i>
+                  <i class="bi bi-geo-alt-fill fs-5 icsca-gsp"></i>
                   <div class="d-block d-sm-flex ps-3 flex-fill flex-wrap flex-sm-nowrap">
-                      <h6 class="pe-sm-5 sla-csoz text-start"><span class="fw-bold d-block">Sri Lanka Office:</span>Kottawa Sri Lanka</h6>
-                      <h6 class="text-start"><span class="fw-bold d-block text-start">Australia Office:</span>Vermont South VIC 3133</h6>
+                      <h6 class="pe-sm-5 sla-csoz text-start context-gsp"><span class="fw-bold d-block">Sri Lanka Office:</span>Kottawa Sri Lanka</h6>
+                      <h6 class="text-start context-gsp"><span class="fw-bold d-block text-start">Australia Office:</span>Vermont South VIC 3133</h6>
                   </div>
               </div>
           </div>
           <div class="row">
             <div class="col">
                 <a href="#">
-                    <div class="bg-dark roundedlink-csoz">
+                    <div class="bg-dark roundedlink-csoz scoiani-gsp">
                         <i class="bi bi-facebook text-light"></i>
                     </div>
                 </a>
             </div>
             <div class="col">
                 <a href="#">
-                    <div class="bg-dark roundedlink-csoz">
+                    <div class="bg-dark roundedlink-csoz scoiani-gsp">
                     <i class="bi bi-twitter text-light"></i>
                 </div>
                 </a>
             </div>
             <div class="col">
                 <a href="#">
-                    <div class="bg-dark roundedlink-csoz">
+                    <div class="bg-dark roundedlink-csoz scoiani-gsp">
                     <i class="bi bi-instagram text-light"></i>
                 </div>
                 </a>
             </div>
             <div class="col">
                 <a href="#">
-                    <div class="bg-dark roundedlink-csoz">
+                    <div class="bg-dark roundedlink-csoz scoiani-gsp">
                     <i class="bi bi-linkedin text-light"></i>
                 </div>
                 </a>
@@ -134,8 +134,8 @@
         <div
           class="herocol-csoz col-lg-6 justify-content-center justify-content-lg-end d-flex align-items-center ps-0 pb-5 pb-lg-4"
         >
-        <div class="bg-light rounded form-csoz">
-            <div class=" pt-5">
+        <div class="bg-light rounded form-csoz fromani-gsp">
+            <div class=" pt-5 ">
                 <div class="px-4">
                     <h2 class="text-center mb-4">Drop Us a Line</h2>
                     <p class="w-75">Programs provi patient peace mind when option.</p>
@@ -280,6 +280,20 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+     <!-- gsap CDN -->
+     <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+     integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+     crossorigin="anonymous"
+     referrerpolicy="no-referrer"
+   ></script>
+   <script
+     src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
+     integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
+     crossorigin="anonymous"
+     referrerpolicy="no-referrer"
+   ></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/animation/contact.js"></script>
   </body>
 </html>
