--- a/portfolio/webfeont.html
+++ b/portfolio/webfeont.html
@@ -76,18 +76,20 @@
     <!-- hero section -->
     <section class="bg-secondary d-flex justify-content-center">
       <div
-        class="hero-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3 overflow-hidden"
+        class="hero-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3"
       >
         <div
           class="herocol-csoz d-flex flex-column justify-content-center align-items-start text-start pe-sm-0 position-relative"
           style="z-index: 2"
         >
-          <div class="werow-csoz d-flex my-5">
+          <div class="werow-csoz d-flex my-5 banner-gsp">
             <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">Portfolio</h5>
           </div>
-          <h2 class="text-altlight fw-bold">Webfront Desk</h2>
-          <div class="bg-danger text-light p-1 px-3">Web Development</div>
+          <h2 class="text-altlight fw-bold mainText-gsp">Webfront Desk</h2>
+          <div class="bg-danger text-light p-1 px-3 butani-gsp">
+            Web Development
+          </div>
         </div>
       </div>
     </section>
@@ -97,10 +99,10 @@
         <img
           src="../assets/img/portfolio_pages/webfront.png"
           alt="webfront"
-          class="img-fluid w-100"
+          class="img-fluid w-100 webimg-gsp"
         />
       </div>
-      <div class="container-xl pt-5">
+      <div class="container-xl pt-5 contsc-gsp">
         <div class="row">
           <div class="col-8">
             <p>
@@ -130,11 +132,11 @@
       </div>
     </section>
 
-    <section class="bg-secondary">
+    <section class="bg-secondary related-gsp">
       <div class="container-xl py-5">
-        <h5 class="pb-4 text-altlight fw-bold">Related Projects</h5>
+        <h5 class="pb-4 text-altlight fw-bold relati-gsp">Related Projects</h5>
         <div class="row g-3">
-          <div class="col-sm-4 py-1">
+          <div class="col-sm-4 py-1 gridrela-gsp">
             <a href="#">
               <img
                 src="../assets/img/works/Rectangle 492.png"
@@ -143,7 +145,7 @@
               />
             </a>
           </div>
-          <div class="col-sm-4 py-1">
+          <div class="col-sm-4 py-1 gridrela-gsp">
             <a href="#">
               <img
                 src="../assets/img/works/Rectangle 493.png"
@@ -152,7 +154,7 @@
               />
             </a>
           </div>
-          <div class="col-sm-4 py-1">
+          <div class="col-sm-4 py-1 gridrela-gsp">
             <a href="#">
               <img
                 src="../assets/img/works/Rectangle 494.png"
@@ -306,6 +308,20 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <!-- gsap CDN -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
+      integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
+      integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/animation/portfoliopage.js"></script>
   </body>
 </html>
