--- a/portfolio/webfeont.html
+++ b/portfolio/webfeont.html
@@ -104,7 +104,7 @@
       </div>
       <div class="container-xl pt-5 contsc-gsp">
         <div class="row">
-          <div class="col-8">
+          <div class="col-12 col-lg-8">
             <p>
               Facility booking/reservation suite, allowing the user to
               book/reserve anything from meeting rooms, boats, tennis courts,
@@ -221,34 +221,36 @@
               </div>
               <ul class="p-0 list-unstyled">
                 <li class="py-2">
-                  <a href="./index.html" class="text-decoration-none text-light"
+                  <a
+                    href="../index.html"
+                    class="text-decoration-none text-light"
                     >Home</a
                   >
                 </li>
                 <li class="py-2">
                   <a
-                    href="./services.html"
+                    href="../services.html"
                     class="text-decoration-none text-light"
                     >Services</a
                   >
                 </li>
                 <li class="py-2">
                   <a
-                    href="./portfolio.html"
+                    href="../portfolio.html"
                     class="text-decoration-none text-light"
                     >Portfolio</a
                   >
                 </li>
                 <li class="py-2">
                   <a
-                    href="./aboutus.html"
+                    href="../aboutus.html"
                     class="text-decoration-none text-light"
                     >About</a
                   >
                 </li>
                 <li class="py-2">
                   <a
-                    href="./contactus.html"
+                    href="../contactus.html"
                     class="text-decoration-none text-light"
                     >Contact Us</a
                   >
