added portfolio page type

--- a/portfolio/webfeont.html
+++ b/portfolio/webfeont.html
@@ -104,7 +104,7 @@
       </div>
       <div class="container-xl pt-5 contsc-gsp">
         <div class="row">
-          <div class="col-12 col-lg-8">
+          <div class="col-md-8 d-flex flex-column justify-content-center">
             <p>
               Facility booking/reservation suite, allowing the user to
               book/reserve anything from meeting rooms, boats, tennis courts,
@@ -117,6 +117,16 @@
               team sports, sporting complexes, education, corporate training,
               first aid classes.
             </p>
+          </div>
+          <div class="col-md-4 colbr-csoz">
+            <div class="pb-4 typerow-csoz">
+              <h6 class="text-light m-0">Project Name</h6>
+              <h6>Webfront Desk</h6>
+            </div>
+            <div class="typerow-csoz">
+              <h6 class="text-light">Our Role</h6>
+              <h6>Development and Maintenance</h6>
+            </div>
           </div>
         </div>
       </div>
