solved animation for grid

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <h1 class="fw-bold text-altlight setitle-gsp">We Provide IT Solutions</h1>
           <p class="separa-gsp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
         </div>
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3 g-lg-5 mt-4">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3 g-lg-5 mt-4 gridse-gsp">
           <div class="col col-lg-4 colani-gsp">
             <div class=" card-csoz p-4 rounded border bg-light">
               <div class="img-co">
