changed our work mobile view and change our testiminols mobile view

--- a/contactus.html
+++ b/contactus.html
@@ -27,7 +27,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-        menu<i class="bi bi-chevron-compact-right"></i>
+        <span class="navbar-toggler-icon"></span>
         </button>
         <!-- navbar links -->
         <div
