--- a/index.html
+++ b/index.html
@@ -307,36 +307,36 @@
                 <div class="row row-cols-1 row-cols-sm-2 g-4">
                   <div class="col">
                     <div class="d-flex align-items-center mb-3">
-                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
                       <img class="ms-3 img-fluid" src="./assets/img/chooseUs/angular.png" alt="angular">
                     </div>
                   </div>
                   <div class="col">
                     <div class="d-flex align-items-center mb-3">
-                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
                       <img class="ms-3 img-fluid" src="./assets/img/chooseUs/react.png" alt="react">
                     </div>
                   </div><div class="col">
                     <div class="d-flex align-items-center mb-3">
-                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
                       <img class="ms-3 img-fluid" src="./assets/img/chooseUs/laravel.png" alt="laravel">
                     </div>
                   </div>
                   <div class="col">
                     <div class="d-flex align-items-center mb-3">
-                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
                       <img class="ms-3 img-fluid" src="./assets/img/chooseUs/flutter.png" alt="flutter">
                     </div>
                   </div>
                   <div class="col">
                     <div class="d-flex align-items-center mb-3">
-                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
                       <img class="ms-3 img-fluid" src="./assets/img/chooseUs/azure.png" alt="azure">
                     </div>
                   </div>
                   <div class="col">
                     <div class="d-flex align-items-center mb-3">
-                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
                       <img class="ms-3 img-fluid" src="./assets/img/chooseUs/aws.png" alt="aws">
                     </div>
                   </div>
@@ -358,32 +358,32 @@
             </div>
             <div class="col-12 col-md-8">
               <div class="row row-cols-1 row-cols-sm-2 g-4">
-                <div class="col secwhy-gsp">
+                <div class="col secwhy-gsp savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
                 </div>
-                <div class="col secwhy-gsp">
+                <div class="col secwhy-gsp savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col secwhy-gsp">
+                </div><div class="col secwhy-gsp savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col secwhy-gsp">
+                </div><div class="col secwhy-gsp savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col secwhy-gsp">
+                </div><div class="col secwhy-gsp savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Innovative solutions</h5>
@@ -407,26 +407,26 @@
             </div>
             <div class="col-12 col-md-8">
               <div class="row row-cols-1 row-cols-sm-2 g-4">
-                <div class="col">
+                <div class="col savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
                 </div>
-                <div class="col">
+                <div class="col savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col">
+                </div><div class="col savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
                   </div>
                   <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
-                </div><div class="col">
+                </div><div class="col savcar-csoz">
                   <div class="d-flex align-items-center mb-3">
                     <img src="./assets/img/chooseUs/tick.svg" alt="tick">
                       <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
@@ -483,7 +483,7 @@
           <h1 class="fw-bold text-altlight ourTitle-gsp">Our Works Will Speaks It selves</h1>
           <p class="ourpara-gsp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
         </div>
-        <div class="imcon-csoz row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5">
+        <div class="imcon-csoz row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 d-none d-sm-flex">
           <div class="col col-sm-6 col-md-4 text-center rounded">
             <img src="./assets/img/works/Rectangle 489.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
@@ -503,7 +503,50 @@
             <img src="./assets/img/works/Rectangle 494.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
           </div>
         </div>
-        <div class="d-flex justify-content-center mt-5">
+        <!-- mobile carousel -->
+        <div id="carouselExampleControlsTouching" class="carousel slide d-none rescour-csoz" data-bs-touch="false" data-bs-interval="false">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="col col-sm-6 col-md-4 text-center rounded">
+                <img src="./assets/img/works/Rectangle 489.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col col-sm-6 col-md-4 text-center rounded">
+                <img src="./assets/img/works/Rectangle 490.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col col-sm-6 col-md-4 text-center rounded">
+                <img src="./assets/img/works/Rectangle 491.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col col-sm-6 col-md-4 text-center rounded">
+                <img src="./assets/img/works/Rectangle 492.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col col-sm-6 col-md-4 text-center rounded">
+                <img src="./assets/img/works/Rectangle 493.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col col-sm-6 col-md-4 text-center rounded">
+                <img src="./assets/img/works/Rectangle 494.png" class="imgorwo-csoz ourworkimgrid-gsp" alt="">
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsTouching" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsTouching" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div class="d-flex justify-content-center mt-4">
           <button class="btn redbut-csoz px-4 text-light serbut-gsp">Read More</button>
         </div>
       </div>
@@ -531,13 +574,25 @@
             <div class="carousel-item active">
               <div class="row gap-3 gap-md-0">
                 <div class="col-md-4 d-flex justify-content-center align-items-center">
-                  <div class="img-container">
+                  <div class="img-container-csoz d-none d-sm-flex">
                     <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
                   </div>
                 </div>
                 <div class="col-md-8 bg-light">
                   <div class="client-content-csoz">
-                    <h1 class="text-altlight fw-bold">“We have been supported by Flexiata”</h1>
+                    <!-- responsive testimonials -->
+                    <div class="row mb-4 rowrete-csoz">
+                      <div class="col d-flex align-items-center">
+                        <h3 class="text-altlight fw-bold">“We have been supported by Flexiata”</h3>
+                      </div>
+                      <div class="col d-flex justify-content-center align-items-center">
+                        <div class="img-container-csoz img-containerRe-csoz">
+                          <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
+                        </div>
+                      </div>  
+                    </div>
+                    <!-- ------------- -->
+                    <h1 class="text-altlight fw-bold d-none d-sm-block">“We have been supported by Flexiata”</h1>
                     <p class="fs-6">We have been supported by Flexiata.  over several years now with our Facility booking web application. We have little expertise in managing a web application and Flexiata has always been available to help. They have made program modifications, installed our system on several different servers, developed add-on facilities to enhance our software’s scope, and given us many hours of advice and guidance. All in all we would thoroughly recommend Flexiata as managers, and developers of software</p>
                     <div class="client-data-csoz">
                       <h3 class="fw-bold text-altlight fs-5">Wendy Cutler</h3>
@@ -550,13 +605,25 @@
             <div class="carousel-item">
               <div class="row gap-3 gap-md-0">
                 <div class="col-md-4 d-flex justify-content-center align-items-center">
-                  <div class="img-container">
+                  <div class="img-container-csoz d-none d-sm-flex">
                     <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
                   </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 bg-light">
                   <div class="client-content-csoz">
-                    <h1 class="text-altlight fw-bold">“We have been supported by Flexiata”</h1>
+                    <!-- responsive testimonials -->
+                    <div class="row mb-4 rowrete-csoz">
+                      <div class="col d-flex align-items-center">
+                        <h3 class="text-altlight fw-bold">“We have been supported by Flexiata”</h3>
+                      </div>
+                      <div class="col d-flex justify-content-center align-items-center">
+                        <div class="img-container-csoz img-containerRe-csoz">
+                          <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
+                        </div>
+                      </div>  
+                    </div>
+                    <!-- ------------- -->
+                    <h1 class="text-altlight fw-bold d-none d-sm-block">“We have been supported by Flexiata”</h1>
                     <p class="fs-6">We have been supported by Flexiata.  over several years now with our Facility booking web application. We have little expertise in managing a web application and Flexiata has always been available to help. They have made program modifications, installed our system on several different servers, developed add-on facilities to enhance our software’s scope, and given us many hours of advice and guidance. All in all we would thoroughly recommend Flexiata as managers, and developers of software</p>
                     <div class="client-data-csoz">
                       <h3 class="fw-bold text-altlight fs-5">Wendy Cutler</h3>
@@ -569,13 +636,25 @@
             <div class="carousel-item">
               <div class="row gap-3 gap-md-0">
                 <div class="col-md-4 d-flex justify-content-center align-items-center">
-                  <div class="img-container">
+                  <div class="img-container-csoz d-none d-sm-flex">
                     <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
                   </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 bg-light">
                   <div class="client-content-csoz">
-                    <h1 class="text-altlight fw-bold">“We have been supported by Flexiata”</h1>
+                    <!-- responsive testimonials -->
+                    <div class="row mb-4 rowrete-csoz">
+                      <div class="col d-flex align-items-center">
+                        <h3 class="text-altlight fw-bold">“We have been supported by Flexiata”</h3>
+                      </div>
+                      <div class="col d-flex justify-content-center align-items-center">
+                        <div class="img-container-csoz img-containerRe-csoz">
+                          <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
+                        </div>
+                      </div>  
+                    </div>
+                    <!-- ------------- -->
+                    <h1 class="text-altlight fw-bold d-none d-sm-block">“We have been supported by Flexiata”</h1>
                     <p class="fs-6">We have been supported by Flexiata.  over several years now with our Facility booking web application. We have little expertise in managing a web application and Flexiata has always been available to help. They have made program modifications, installed our system on several different servers, developed add-on facilities to enhance our software’s scope, and given us many hours of advice and guidance. All in all we would thoroughly recommend Flexiata as managers, and developers of software</p>
                     <div class="client-data-csoz">
                       <h3 class="fw-bold text-altlight fs-5">Wendy Cutler</h3>
@@ -641,7 +720,7 @@
           <div class="row g-3 justify-content-between">
             <div class="col-12 col-sm-6 col-md-2 p-2 p-md-1">
               <div class="mb-4">
-                <img src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png" class="img-fluid" alt="footer flexiata">
+                <img src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png"  alt="footer flexiata">
               </div>
               <p class="text-light lh-sm">Summit7Agency is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibu eget iaculis purus</p>
               <div class="row mt-4">
