--- a/aboutus.html
+++ b/aboutus.html
@@ -30,7 +30,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-        menu<i class="bi bi-chevron-compact-right"></i>
+        <span class="navbar-toggler-icon"></span>
         </button>
         <!-- navbar links -->
         <div
@@ -102,24 +102,24 @@
         </div>  
       </section>
       <!-- counter section -->
-    <section class="bg-darkblue m-auto overflow-hidden  position-relative">
+      <section class="bg-darkblue m-auto overflow-hidden  position-relative" id="counter">
         <div class="container-xl py-5">
           <div class="row text-secondary">
-            <div class="col-sm-3 text-center py-3 p-sm-0 fw-bold">
-              <h3 class="fw-bold fs-2">197</h3>
-              <h5  class="fw-normal fs-6">Project Finished</h5>
+            <div class="col-sm-3 text-center py-4 p-sm-0 fw-bold bordebd-csoz">
+              <h3 class="fw-bold fs-1 counter" data-target="197">0</h3>
+              <h5  class="fw-normal fs-5">Project Finished</h5>
             </div>
-            <div class="col-sm-3 text-center py-3 p-sm-0">
-              <h3 class="fw-bold fs-2">18+</h3>
-              <h5 class="fw-normal fs-6">Year Experience</h5>
+            <div class="col-sm-3 text-center py-4 p-sm-0 bordebd-csoz">
+              <h3 class="fw-bold fs-1 counter plus" data-target="18">0</h3>
+              <h5 class="fw-normal fs-5">Year Experience</h5>
             </div>
-            <div class="col-sm-3 text-center py-3 p-sm-0">
-              <h3 class="fw-bold fs-2">230+</h3>
-              <h5 class="fw-normal fs-6">Happy Customers</h5>
+            <div class="col-sm-3 text-center py-4 p-sm-0 bordebd-csoz">
+              <h3 class="fw-bold fs-1 counter plus" data-target="230">0</h3>
+              <h5 class="fw-normal fs-5">Happy Customers</h5>
             </div>
-            <div class="col-sm-3 text-center py-3 p-sm-0">
-              <h3 class="fw-bold fs-2">1087</h3>
-              <h5 class="fw-normal fs-6">Recognition</h5>
+            <div class="col-sm-3 text-center py-4 p-sm-0 bordebd-csoz">
+              <h3 class="fw-bold fs-1 counter" data-target="1087">0</h3>
+              <h5 class="fw-normal fs-5">Recognition</h5>
             </div>
           </div>
   
@@ -371,6 +371,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/counter.js"></script> <!--counter-->
     <script src="./assets/js/animation/about.js"></script>
   </body>
 </html>
