change footer logo size

--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
           <div class="row g-3 justify-content-between">
             <div class="col-12 col-sm-6 col-md-2 p-2 p-md-1">
               <div class="mb-4">
-                <img src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png"  alt="footer flexiata">
+                <img src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png" class="w-50"  alt="footer flexiata">
               </div>
               <p class="text-light lh-sm">Summit7Agency is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibu eget iaculis purus</p>
               <div class="row mt-4">
