--- a/portfolio/webfeont.html
+++ b/portfolio/webfeont.html
@@ -186,7 +186,7 @@
               <div class="mb-4">
                 <img
                   src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png"
-                  class="img-fluid"
+                  class="w-50"
                   alt="footer flexiata"
                 />
               </div>
