changed form center error

--- a/contactus.html
+++ b/contactus.html
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div
-          class="herocol-csoz col-lg-6 justify-content-center justify-content-lg-end d-flex align-items-center pb-5 pb-lg-4"
+          class="herocol-csoz col-lg-6 justify-content-center justify-content-lg-end d-flex align-items-center ps-0 pb-5 pb-lg-4"
         >
         <div class="bg-light rounded form-csoz fromani-gsp">
             <div class=" pt-5 ">
