chaned menu color and changed servics tab

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 
     <!-- client section -->
     <section id="clients" class="second-section">
-      <div class="container-xl row m-auto py-5">
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0 counter-gsp"><img src="./assets/img/company/slack.png" alt="slack"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0 counter-gsp"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0 counter-gsp"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0 counter-gsp"><img src="./assets/img/company/google.png" alt="google"></div>
-        <div class="col-md clients-csoz col-sm-4 text-center py-4 p-md-0 counter-gsp"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
+      <div class="container-xl row m-auto py-4">
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/slack.png" alt="slack"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/logitech.png" alt="logitech"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/google.png" alt="google"></div>
+        <div class="col-md clients-csoz col-sm-4 text-center py-5 p-md-0 counter-gsp"><img src="./assets/img/company/facebook.png" alt="facebook"></div>
       </div>
     </section>
 
@@ -305,39 +305,39 @@
               </div>
               <div class="col-12 col-md-8">
                 <div class="row row-cols-1 row-cols-sm-2 g-4">
-                  <div class="col">
-                    <div class="d-flex align-items-center mb-3">
+                  <div class="col-6 col-sm">
+                    <div class="d-flex align-items-center h-100 mb-3">
                       <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
-                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/angular.png" alt="angular">
+                      <img class="ms-sm-3 img-fluid" src="./assets/img/chooseUs/angular.png" alt="angular">
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="d-flex align-items-center mb-3">
+                  <div class="col-6 col-sm">
+                    <div class="d-flex align-items-center h-100 mb-3">
                       <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
-                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/react.png" alt="react">
+                      <img class="ms-sm-3 img-fluid" src="./assets/img/chooseUs/react.png" alt="react">
                     </div>
-                  </div><div class="col">
-                    <div class="d-flex align-items-center mb-3">
+                  </div><div class="col-6 col-sm">
+                    <div class="d-flex align-items-center h-100 mb-3">
                       <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
-                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/laravel.png" alt="laravel">
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="d-flex align-items-center mb-3">
-                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
-                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/flutter.png" alt="flutter">
+                      <img class="ms-sm-3 img-fluid" src="./assets/img/chooseUs/laravel.png" alt="laravel">
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="d-flex align-items-center mb-3">
+                  <div class="col-6 col-sm">
+                    <div class="d-flex align-items-center h-100 mb-3">
                       <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
-                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/azure.png" alt="azure">
+                      <img class="ms-sm-3 img-fluid" src="./assets/img/chooseUs/flutter.png" alt="flutter">
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="d-flex align-items-center mb-3">
+                  <div class="col-6 col-sm">
+                    <div class="d-flex align-items-center h-100 mb-3">
                       <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
-                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/aws.png" alt="aws">
+                      <img class="ms-sm-3 img-fluid" src="./assets/img/chooseUs/azure.png" alt="azure">
+                    </div>
+                  </div>
+                  <div class="col-6 col-sm">
+                    <div class="d-flex align-items-center h-100 mb-3">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick" class="d-none d-sm-block">
+                      <img class="ms-sm-3 img-fluid" src="./assets/img/chooseUs/aws.png" alt="aws">
                     </div>
                   </div>
                 </div>
